src/test/compile-fail/liveness-issue-2163.rs
fn main() {
    let a: ~[int] = ~[];
    vec::each_ref(a, fn@(_x: &int) -> bool {
        //~^ ERROR not all control paths return a value
    });
}
